--- a/angular.json
+++ b/angular.json
@@ -6,16 +6,22 @@
     "02-bases": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
-          "standalone": false
-        },
-        "@schematics/angular:directive": {
-          "standalone": false
-        },
-        "@schematics/angular:pipe": {
-          "standalone": false
-        }
-      },
+  "@schematics/angular:component": {
+    "standalone": false,
+    "inlineTemplate": false,
+    "inlineStyle": false,
+    "style": "css",
+    "skipTests": false,
+    "flat": false,
+    "changeDetection": "Default"
+  },
+  "@schematics/angular:directive": {
+    "standalone": false
+  },
+  "@schematics/angular:pipe": {
+    "standalone": false
+  }
+},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
