--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "delete:docs": "del docs",
-    "copy:dist": "copyfiles -u 1 dist/02-bases/**/* ./docs"
+    "copy:dist": "copyfiles -u 1 dist/02-bases/**/* ./docs && copyfiles dist/02-bases/index.html ./docs"
   },
   "private": true,
   "dependencies": {
